theory of  html tags

--- a/second.html
+++ b/second.html
@@ -9,14 +9,13 @@
 </head>
 
 <body>
-  <iframe width="500" height="500" src="https://www.youtube.com/embed/EQu9JzU621I"
+  <!-- <iframe width="500" height="500" src="https://www.youtube.com/embed/EQu9JzU621I"
     title="Top 6 Coding Tutorials to Kickstart Your Programming Journey on YouTube |@CodeWithHarry @CheezyCode"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
 
   </iframe>
-  <br />
   <br />
   <br />
 
@@ -26,11 +25,71 @@
   <video width="500" height="500" controls loop autoplay>
     <source src="Videos/vid.mp4" type="video/mp4">
     <br />
+    <br />
 
-  <audio controls loop  muted autoplay>
+
+  <audio controls loop muted autoplay>
     <source src="audio/Knife Brows - Dhanda Nyoliwala.mp3" type="audio/mp3">
+  </audio>
+  <br />
+  <br /> -->
 
 
+  <!-- <h1>Ordered list</h1>
+  <ol style="list-style-type: lower-roman;">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>React</li>
+    <li>Node</li>
+  </ol>
+  <br />
+  <h1>Unordered list</h1>
+  <ul style="list-style-type: square;">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>React</li>
+    <li>Node</li> -->
+
+  <table border="1" width="300" cellspacing="0">
+    <thead>
+      <tr>
+        <th>Country</th>
+        <th>Litracy Rate</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td align="center"> India</td>
+        <td align="center"> 75%</td>
+      </tr>
+      <tr>
+        <td align="center"> USA</td>
+        <td align="center"> 90%</td>
+      </tr>
+      <tr>
+        <td align="center"> UK</td>
+        <td align="center"> 85%</td>
+      </tr>
+      <tr>
+        <td align="center"> China</td>
+        <td align="center"> 80%</td>
+      </tr>
+      <tr>
+        <td align="center"> Japan</td>
+        <td align="center"> 90%</td>
+
+    </tbody>
+    <tfoot>
+      <tr>
+        <td align="center"> Average</td>
+        <td align="center"> 82.5%</td>
+      </tr>
+    </tfoot>
+
+  </table>
 
 
 </body>
