--- a/css codes/index.html
+++ b/css codes/index.html
@@ -6,32 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My first Document</title>
     <style>
-        body {
-            background-color: lightblue;
-        } */
-         h1 {
-            background-color: lightgreen;
-        }
-        /* it define class selector ,tag selector  and  id selector  */
-        .redbaclground {
-            background-color: red;
-        }
-        #changeColor {
+        /* Adjacent Siblings Selector  */
+        h2 + h3 {
             color: red;
         }
-        /* it define universal selector*/ 
-        *
-        {
+        h1 ~ h2 {
             color: green;
         }
-
     </style>
     </head>
     <body>
+        <div>
+            <h1> i am inside div </h1>
+            <h1> i am inside div </h1>
+            <section>
+                <h1> i am inside section </h1>
+                <h1> i am inside section </h1>
+
+
+        </div>
+
+
+
         <h1> This is first h1 tag</h1>
         <h2 class="redbaclground"> This is first h2 tag</h2>
         <h1> This is second h1 tag</h1>
         <h2 class="redbaclground"> This is second h2 tag</h2>
+        <h3 class="redbaclground"> This is third h3 tag</h3>
+
+        <h2 class="redbaclground"> This is second h2 tag</h2>
+
+        <h2 class="redbaclground"> This is second h2 tag</h2>
+        <h2 class="redbaclground"> This is second h2 tag</h2>
+        <h3 class="redbaclground"> This is third h3 tag</h3>
+        <h2 class="redbaclground"> This is second h2 tag</h2>
+        <h2 class="redbaclground"> This is second h2 tag</h2>
+
+
+
+
         <h1 id="changeColor"> This is third h1 tag</h1>
 
     </body>
