--- a/css codes/pseudocode.html
+++ b/css codes/pseudocode.html
@@ -7,49 +7,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pseudo Element</title>
     <style>
-        chat::before {
-            content: "";
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-            background-color: green;
-            border: none;
-            border-radius: 50px;
-            color: red;
-            font-size: 20px;
-        }
-        #newcss::first-line {
-            color: red;
-            font-size: 20px;
+        a[href^="#"]::before {
+            content: "🔗";
+            margin-right: 5px;
         }
 
-        chat::after {
-
-            content: "New message here";
-            background-color: yellow;
-            color: black;
-            opacity: 0.5;
-            border: none;
-            border-radius: 50px;
-            margin-left: 9px;
-            padding: 2px;
-
+        input[type="email"] {
+            background-color: #6650e4;
+            color: red;
         }
     </style>
 </head>
 
-<body>
-    <p id="chat"> This is a paragraph</p>
-    <p id="newcss">There are many variations of
-        passages of Lorem Ipsum available, but the majority
-        have suffered alteration in some form,
-        by injected humour, or randomised words
-        which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure
-        there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet
-        tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a
-        dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem
-        Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected
-        humour, or non-characteristic words etc. </p>
+<br>
+<a href="#"> Internal 1</a>
+<a href="http-equiv"> Gooogler</a>
+<a href="#"> Internal 3</a>
+<a href="http-equiv"> Youtuber</a>
+<a href="#"> Internal 5</a>
+
+</br>
+</br>
+
+
+
+
+<input type="text">
+<input type="email">
+<input type="password">
+<input type="contact">
+<input type="second name ">
+<input type="rank">
+<input type="location">
 
 
 </body>
